# Hive

./: .gitignore  Cargo.toml  Journal.md  README.md
client/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  main.tsx
client/src/Components/: Header.tsx  LandingPage.tsx  Login.tsx
server/: Cargo.toml
